[project]
name = "skriptnd"
version = "0.1"
description = "A package for parsing SkriptND files"
requires-python = ">=3.7"

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 3',
]
dynamic = ["readme"]
keywords = ["skriptnd"]

authors = [
    { name = "Khronos Group", email = "nnef@lists.khronos.org" },
]
maintainers = [{ name = "Viktor Gyenes", email = "viktor.gyenes@aimotive.com" }]

dependencies = ["numpy", "pybind11"]

[build-system]
requires = ["setuptools", "wheel", "numpy", "Cython"]
build-backend = "setuptools.build_meta"


[project.urls]
"Homepage" = "https://www.khronos.org/nnef"
"Repository" = "https://github.com/KhronosGroup/NNEF-Tools"

[tool.setuptools.dynamic]
readme = { file = ["package_info.md"], content-type = "text/markdown"  }

[tool.setuptools.package-data]
"skriptnd.cpp" = ["**/*"]
"skriptnd.stdlib" = ["*.sknd"]

[tool.cibuildwheel]
# Skip PyPy wheels
skip = "pp*"

test-command = "python {package}/tests/test.py"
